# comfyui-cinema-worldbuilder

./: .gitignore  FINDINGS_FOR_LTX.md  LINKEDIN_POST.md  README.md  __init__.py  cinema_grammar.py  conftest.py  nodes.py  pyproject.toml
docs/: 2026-05-19-cinema-worldbuilder-comfyui-design.md  2026-05-19-cinema-worldbuilder-implementation-plan.md
example_workflows/: baseline_ltx23_t2v_hires.json  cinema_ltx23_i2v.json  cinema_ltx23_i2v_ui.json  cinema_ltx23_t2v.json  cinema_ltx23_t2v_hires.json  cinema_ltx23_t2v_hires_fp8.json  cinema_ltx23_t2v_ui.json  cinema_ltx23_v2v.json  cinema_ltx23_v2v_ui.json
sweep/: ab_compare.py  build_figures.py  build_fp8_comparison_reel.py  cinema_showcase.py  cinema_sweep.py  cinema_sweep_v2.py  clip_similarity.py
sweep/results/: ANALYSIS.md  review.html
sweep/results_v2/: ANALYSIS_v2.md  clip_similarity.json
tests/: test_cinema_grammar.py
